# x64dbg-mcp

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
plugin/: CMakeLists.txt
plugin/compat/dbghelp/: dbghelp.h
plugin/src/: debugger_analysis.cpp  debugger_breakpoint_options.cpp  debugger_context.cpp  debugger_execution.cpp  debugger_inspection.cpp  debugger_instruction_search.cpp  debugger_linear.cpp  debugger_metadata.cpp  debugger_pe.cpp  debugger_re.cpp  debugger_run_control.cpp  debugger_stack.cpp  debugger_tools.h  dispatcher.cpp  dispatcher.h  import_utils.cpp  import_utils.h  instruction_utils.cpp  instruction_utils.h  json_helpers.cpp  json_helpers.h  memory_utils.cpp  memory_utils.h  module_utils.cpp  module_utils.h  pattern_utils.cpp  pattern_utils.h  pipe_protocol.cpp  pipe_protocol.h  pipe_server.cpp  pipe_server.h  plugin_main.cpp  sdk.h  session_file.cpp  session_file.h  text.cpp  text.h
src/xdbg_mcp/: __init__.py  binding.py  errors.py  health.py  info.py  server.py  sessions.py  winpipe.py
