[project]
name = "xdbg-mcp"
version = "0.1.0"
description = "MCP server and x64dbg/x32dbg plugin bridge"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
]

[project.scripts]
xdbg-mcp = "xdbg_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xdbg_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
